# causal-ui-gym

./: .dockerignore  .editorconfig  .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierignore  .releaserc.json  .secrets.baseline  .trivyignore  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DISASTER_RECOVERY.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  GITHUB_WORKFLOWS_IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_READINESS_CHECKLIST.md  PROJECT_CHARTER.md  README.md  SDLC_CHECKPOINTS_IMPLEMENTATION_SUMMARY.md  SDLC_ENHANCEMENT_SUMMARY.md  SDLC_MATURITY_ENHANCEMENT_IMPLEMENTATION.md  SECURITY.md  SLSA_PROVENANCE.md  TERRAGON_SDLC_COMPLETION_REPORT.md  TERRAGON_SDLC_COMPLETION_SUMMARY.md  bundle-analyzer.js  docker-compose.monitoring.yml  docker-compose.production-ready.yml  docker-compose.production.yml  docker-compose.yml  health_checks.py  index.html  install-workflows.sh  (+18 more)
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.dev.yml  post-create.sh  post-start.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  e2e.yml  release.yml  security.yml
backend/: __init__.py  experiments.json  initialization.py  scalable_server.py  simple_server.py  warmup.py
backend/api/: server.py  websocket_manager.py
backend/benchmarking/: __init__.py  causal_benchmarks.py
backend/cache/: __init__.py  cache_manager.py
backend/engine/: __init__.py  causal_engine.py
backend/error_handling/: __init__.py  advanced_error_system.py  causal_exceptions.py
backend/llm/: __init__.py  llm_agents.py  research_agents.py
backend/middleware/: __init__.py  security.py
deployment/: .env.production.template  README.md  deploy.sh  docker-compose.production.yml  entrypoint.sh  kubernetes.yml  nginx-frontend.conf  nginx.conf  production-orchestrator.py  production-orchestrator.yml  supervisord.conf
docs/: ADVANCED_DEPLOYMENT.md  API_DOCUMENTATION.md  ARCHITECTURE.md  CONTAINER_SECURITY.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  MONITORING.md  OBSERVABILITY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  RESEARCH_CONTRIBUTIONS.md  RESEARCH_PUBLICATION.md  ROADMAP.md  SBOM_SLSA_COMPLIANCE.md  SECURITY_ARCHITECTURE.md
examples/: README.md  basic-experiment.tsx  complete-demo.tsx
monitoring/: alerts.yml  loki.yml  otel-collector.yml  prometheus.yml  promtail.yml
nginx/: nginx.conf
scripts/: build.sh  deploy-production.sh  init-db.sql  production-check.sh  quality-gates.py
src/: App.tsx  index.ts
src/types/: index.ts
tests/: README.md  TEST_STRATEGY.md  conftest.py  experiments.json  health_check.py  integration_test.py  performance_test.py  setup.ts
(+77 files in other folders)
