[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "causal-ui-gym"
version = "0.1.0"
description = "React + JAX framework for testing LLM causal reasoning through interactive UI"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Daniel Schmidt" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "jax>=0.4.28",
    "jaxlib>=0.4.28",
    "numpy>=1.24.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pgmpy>=0.1.25",
    "causalnex>=0.12.0",
    "dowhy>=0.11.0",
    "openai>=1.35.0",
    "anthropic>=0.30.0",
    "pandas>=2.0.0",
    "networkx>=3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
gpu = [
    "jax[cuda12_pip] @ https://storage.googleapis.com/jax-releases/jax_cuda_releases.html",
]

[project.urls]
Homepage = "https://github.com/yourusername/causal-ui-gym"
Repository = "https://github.com/yourusername/causal-ui-gym.git"
Issues = "https://github.com/yourusername/causal-ui-gym/issues"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=causal_ui_gym",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["causal_ui_gym"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]